# resource-etl

./: README.md  pyproject.toml
biorxiv/: download.py  lambda_function.py  util.py
glue/: clean_arxiv_job.py
medrxiv/: download.py  lambda_function.py  upload.py
